Update and rename index.html to ?/index.html

--- a/?/index.html
+++ b/?/index.html
@@ -181,7 +181,7 @@
         if (navigator.share) {
           // Menggunakan Web Share API jika tersedia
           navigator.share({
-            title: 'Kutipan Inspiratif',
+            title: 'Kutipan',
             text: quoteText,
             url: window.location.href
           })
