--- a/space/index.html
+++ b/space/index.html
@@ -1,4 +1,107 @@
 <!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sebuah Kata</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #f0f4f8, #e0e6ed);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    .container {
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      width: 80%;
+      max-width: 600px;
+      padding: 40px;
+      transition: transform 0.3s ease;
+    }
+
+    .container:hover {
+      transform: translateY(-5px);
+    }
+
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 36px;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    blockquote {
+      font-family: 'Playfair Display', serif;
+      font-size: 24px;
+      font-weight: 700;
+      color: #555;
+      margin: 0;
+      padding: 20px;
+      border-left: 4px solid #333;
+      position: relative;
+      line-height: 1.5;
+    }
+
+    blockquote::before, blockquote::after {
+      content: '"';
+      font-size: 3rem;
+      color: #e74c3c;
+      opacity: 0.2;
+      position: absolute;
+      line-height: 1;
+    }
+
+    blockquote::before {
+      top: -10px;
+      left: 5px;
+    }
+
+    blockquote::after {
+      content: '"';
+      bottom: -35px;
+      right: 5px;
+    }
+
+    blockquote small {
+      display: block;
+      margin-top: 15px;
+      font-size: 18px;
+      color: #888;
+    }
+
+    blockquote small::before {
+      content: "— ";
+    }
+
+    .button {
+      background-color: #333;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 50px;
+      text-decoration: none;
+      border: none;
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    .button:hover {
+      background-color: #555;
+      transform: translateY(-2px);
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
     }
 
