--- a/404.html
+++ b/404.html
@@ -109,7 +109,8 @@
         <div class="icon">◯</div>
         <div class="error-code">Error 404 - Halaman Tidak Ditemukan</div>
         <h1>Ini kosong</h1>
-        <p>Halaman yang Anda cari tidak ditemukan.</p>
+        <p>Halaman yang Anda cari tidak ditemukan.
+        Anda akan kembali keberanda dalam 5 detik.</p>
         
         <div class="footer">
         </div>
@@ -117,8 +118,8 @@
 
     <script>
         setTimeout(function() {
-            window.location.href = "https://www.afno.spacs";
-        }, 5000);
+            window.location.href = "/";
+        }, 8000);
     </script>
 </body>
 </html>
