--- a/kata.afno/2.html
+++ b/kata.afno/2.html
@@ -163,7 +163,7 @@
     </blockquote>
     
     <footer>
-      <p>&copy; 2025 ruang.afno | <a href="https://www.instagram.com/ruang.afno">Profile Afno</a></p>
+      <p>&copy; 2025 ruang.afno | <a href="https://www.instagram.com/ruang.afno">Tentang Afno</a></p>
     </footer>
   </div>
 
