--- a/kata.afno/1.html
+++ b/kata.afno/1.html
@@ -151,8 +151,8 @@
 <body>
   <div class="container">
     <blockquote id="quote">
-      "Jika kamu mencintai seseorang, biarkan dia pergi.Jika ia kembali, maka ia milikmu.Namun jika ia tidak kembali, ketahuilah maka dia bukan milikmu."
-      <small id="author">Ali bin Abi Thalib</small>
+      "Jika kamu milikku, Yaudah gpp."
+      <small id="author">Someone</small>
     </blockquote>
     
     <footer>
