--- a/kata.afno/index.html
+++ b/kata.afno/index.html
@@ -152,7 +152,7 @@
   <div class="container">
     <blockquote id="quote">
       "Jika kamu milikku, Yaudah gpp."
-      <small id="author">Someone</small>
+      <small id="author">Gamo</small>
     </blockquote>
     
     <footer>
