--- a/kata.arkan/index.html
+++ b/kata.arkan/index.html
@@ -169,7 +169,7 @@
     
     
     <footer>
-      <p>&copy; 2025 ruang.afno | <a href="https://www.instagram.com/ruang.afno">Tentang Afno</a></p>
+      <p>&copy; 2025 <a href="https://www.instagram.com/ruang.afno">ruang.afno</a> | <a href="https://www.instagram.com/abyarknn_">Tentang Arkan</a></p>
     </footer>
   </div>
 
