--- a/kata.nagek/index.html
+++ b/kata.nagek/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sebuah Kata - Dark Mode</title>
+  <title>Sebuah Kata - Dari Nagek</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <style>
     /* 🌌 TEMA GELAP */
@@ -162,7 +162,7 @@
     </blockquote>
     
     <footer>
-      <p>&copy; 2025 ruang.afno | <a href="https://www.instagram.com/ruang.afno">Tentang Afno</a></p>
+      <p>&copy; 2025 <a href="https://www.instagram.com/ruang.afno">ruang.afno</a> | <a href="https://www.instagram.com/ganasss.1">Tentang Nagek</a></p>
     </footer>
   </div>
 
